--- a/template/Home.html
+++ b/template/Home.html
@@ -19,17 +19,17 @@
             <div class="text-center mb-5 text-dark">Chatting with others way more fun !</div>
             <div class="card my-5">
     
-              <form class="card-body cardbody-color p-lg-5">
-    
+              <form class="card-body cardbody-color p-lg-5" method="POST" action="checkview">
+                {% csrf_token %}
                 <div class="text-center">
                   <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3" width="200px" alt="profile">
                 </div>
     
                 <div class="mb-3">
-                  <input type="text" class="form-control" id="RoomCode" aria-describedby="emailHelp" placeholder="Room Code">
+                  <input type="text" class="form-control" name="RoomCode" id="RoomCode" aria-describedby="emailHelp" placeholder="Room Code">
                 </div>
                 <div class="mb-3">
-                  <input type="username" class="form-control" id="Username" placeholder="Username">
+                  <input type="username" class="form-control" name="Username" id="Username" placeholder="Username">
                 </div>
                 <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Login</button></div>
                 <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not Registered? 
