--- a/template/Room.html
+++ b/template/Room.html
@@ -1,7 +1,4 @@
 {% load static %}
-{% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,39 +6,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Room</title>
+    <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/roomstyle.css' %}">
 </head>
 <body>
-    <div class="chat_window">
-        <div class="top_menu">
-            <div class="buttons">
-                <div class="button close"></div>
-                <div class="button minimize"></div>
-                <div class="button maximize"></div>
-            </div>
-            <div class="title">Chat</div>
-        </div>
-        <ul class="messages"></ul>
-        <div class="bottom_wrapper clearfix">
-            <div class="message_input_wrapper">
-                <input class="message_input" placeholder="Type your message here..." />
-            </div>
-            <div class="send_message">
-                <div class="icon"></div>
-                <div class="text">Send</div>
-            </div>
-        </div>
-    </div>
-    <div class="message_template">
-        <li class="message">
-            <div class="avatar"></div>
-            <div class="text_wrapper">
-                <div class="text"></div>
-            </div>
-        </li>
-    </div>
+    <h2>Room Chat Messages !</h2>
+    <div class="container">
+        <h4>Hello. How are you today?</h4>
+        <span class="time-right">11:00</span>
+      </div>
 
-    <script src="{% static 'javascript/app.js' %}"></script>
+      <div class="container-form">
+        <form action="">
+            <input type="hidden" name="Username" id="Username">
+            <input type="hidden" name="RoomCode" id="RoomCode">
+            <input type="text" name="message" id="message" width="100px">
+            <input type="submit" value="send">
+        </form>
+        </div>
 </body>
 </html>
